--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ form h1::before{
     #web{
         width: 600px;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 3fr;
         grid-template-areas: 
         "header"
         "main"
@@ -192,7 +192,7 @@ form h1::before{
     }
     header{
         grid-area: header;
-        background-color: aquamarine;
+        background-color: rgb(125, 192, 206);
     }
     main{
         grid-area: main;
