--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 :root{
     --black:var(--black);
 }
+/*web*/
 #web{
-    display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(19rem,1 fr)); 
+    min-width: 500px;
+    max-width:1120px;
 }
 /*header*/
 header {
@@ -12,7 +13,6 @@ header {
     justify-content:space-around;
     background-color:rgb(125, 192, 206);
 }
-
 /*header a*/
 header a{
     text-align: center;
@@ -37,6 +37,7 @@ header a{
 
 /*article*/
 .services{
+    background-color: rgb(177, 175, 175);
     color: black;
     padding: 20px;
     text-transform: uppercase;
