--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ header a{
 }
 /*Article box*/
 .box{
-    display:grid;
-    grid-template-columns: 1 fr;    
+    display:flex; 
     justify-content: space-between;
     color:var(--black);
 }
@@ -125,5 +124,13 @@ header a{
     text-align: center;
     padding-top: 50px;
     margin-top: 0px;
+}
+@media only screen and (min width 600px{
+.box{
+    display:grid;
+    grid-template-columns: 1 fr;    
+    justify-content: space-between;
+    color:var(--black);
+    align-items:center;
 }
 }
